# pyproject.toml

[build-system]
requires      = ["setuptools>=63.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrkbun"
version = "1.2.0"
description = "An unoffical Python library and CLI for the Porkbun domain registrars API"
readme = "README.md"
authors = [{ name = "jxg81" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Natural Language :: English",
]

keywords = ["API", "Porkbun", "DNS", "Registrar"]

dependencies = ["httpx[http2]", "colorama"]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["python-dotenv", "setuptools"]

[project.urls]
Homepage = "https://github.com/jxg81/pyrkbun"

[project.scripts]
pyrkbun = "pyrkbun.cli:main"
